<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.register.signup.SignupActivity">

    <TextView
        android:id="@+id/signUp_welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signUp_welcome"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUp_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimaryVariant"
        android:hint="@string/signUp_email_hint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_welcome_textView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signUp_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:digits="@string/general_passwordDigits"
        android:hint="@string/signUp_password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="@integer/general_maxPasswordLength"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email_editText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signUp_repPassword_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:digits="@string/general_passwordDigits"
        android:hint="@string/signUp_repPassword_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="@integer/general_maxPasswordLength"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password_editText"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/signUp_coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_repPassword_editText">

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <Button
        android:id="@+id/signUp_signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:text="@string/signUp_action"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_coordinatorLayout" />

    <ProgressBar
        android:id="@+id/signUp_loading_processBar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/colorPrimaryVariant"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/greenprogress"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_signUp_button" />

    <TextView
        android:id="@+id/signUp_appName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryVariant"
        android:text="@string/app_name"
        android:textColor="@color/colorOnPrimary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUp_loginLink_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/signUp_loginLink"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_signUp_button" />

</androidx.constraintlayout.widget.ConstraintLayout>