<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Ash_Gray"
    tools:context=".ui.search.SearchFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_typeQuery_textView"
        tools:listitem="@layout/card_animes" />

    <ProgressBar
        android:id="@+id/search_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminateTint="@color/colorPrimary2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/search_coordinatorLayout"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/search_searchView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_rounded_corner"
        android:closeIcon="@drawable/search_view_clear_search"
        android:iconifiedByDefault="false"
        android:imeOptions="actionGo"
        android:layoutDirection="inherit"
        android:queryHint="@string/search_query_hint"
        android:searchIcon="@drawable/search_view_icon_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_typeQuery_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:maxLines="3"
        android:text="@string/search_defaultTypeQuery_text"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_airingAnimes_button" />

    <Button
        android:id="@+id/search_airingAnimes_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:text="@string/search_getAiringAnimes_text"
        android:textColor="@color/Black"
        android:visibility="visible"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="end"
        app:iconTint="@color/Black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_searchView" />

</androidx.constraintlayout.widget.ConstraintLayout>